fixify overflow

--- a/webpack/src/react/components/PageSwitch/PageSwitch.scss
+++ b/webpack/src/react/components/PageSwitch/PageSwitch.scss
@@ -1,7 +1,7 @@
 .PageSwitch {
   .Page {
     background: white;
-    overflow-x: hidden;
+    overflow: hidden;
   }
   .page-enter {
     opacity: 0;
